--- a/packages/chat/tsconfig.app.json
+++ b/packages/chat/tsconfig.app.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "plugins": [
+      { "transform": "typia/lib/transform" },
+    ],
 
     /* Bundler mode */
     "moduleResolution": "Bundler",
