--- a/packages/chat/tsconfig.node.json
+++ b/packages/chat/tsconfig.node.json
@@ -4,6 +4,9 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "plugins": [
+      { "transform": "typia/lib/transform" },
+    ],
 
     /* Bundler mode */
     "moduleResolution": "Bundler",
@@ -17,7 +20,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
   },
   "include": ["vite.config.ts"]
 }
