--- a/packages/chat/tsconfig.json
+++ b/packages/chat/tsconfig.json
@@ -1,7 +1,20 @@
 {
+  "compilerOptions": {
+    "strict": true,
+    "plugins": [
+      {
+        "transform": "typia/lib/transform"
+      }
+    ],
+    "strictNullChecks": true
+  },
   "files": [],
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
   ]
 }
