--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/chat",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "type": "module",
   "main": "./lib/index.mjs",
   "typings": "./lib/index.d.ts",
@@ -78,7 +78,7 @@
     "react-mui-fileuploader": "^0.5.2",
     "rimraf": "^6.0.1",
     "rollup": "^4.24.2",
-    "ts-node": "^10.9.2",
+    "ts-patch": "^3.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
