--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/chat",
-  "version": "0.3.5",
+  "version": "0.3.8",
   "type": "module",
   "main": "./lib/index.mjs",
   "typings": "./lib/index.d.ts",
@@ -90,7 +90,6 @@
     "dist",
     "lib",
     "src",
-    "!src/main.ts",
-    "!src/shopping.ts"
+    "!src/examples"
   ]
 }
