--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@nestia/chat",
-  "version": "0.3.11",
-  "type": "module",
-  "main": "./lib/index.mjs",
-  "typings": "./lib/index.d.ts",
+  "version": "0.3.12",
+  "main": "lib/index.js",
+  "module": "lib/index.mjs",
+  "typings": "lib/index.d.ts",
   "description": "Super A.I. Chatbot application by Swagger Document",
   "scripts": {
     "build": "npm run build:static && npm run build:lib",
@@ -39,14 +39,14 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.0",
     "@nestia/agent": "workspace:^",
-    "@samchon/openapi": "^2.4.1",
+    "@samchon/openapi": "^2.4.2",
     "html2canvas": "^1.4.1",
     "js-file-download": "^0.4.12",
     "react-markdown": "^9.0.3",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-mermaid-plugin": "^1.0.2",
-    "typia": "^7.6.2",
+    "typia": "^7.6.3",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -71,7 +71,7 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "js-yaml": "^4.1.0",
-    "openai": "^4.82.0",
+    "openai": "^4.83.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-json-editor-ajrm": "^2.5.14",
