--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "5.0.0-dev.20250223",
+  "version": "5.0.0-dev.20250301",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -39,7 +39,7 @@
     "@nestia/fetcher": "workspace:^",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
-    "@samchon/openapi": "3.0.0-dev.20250224",
+    "@samchon/openapi": "^3.0.0-dev.20250301",
     "detect-ts-node": "^1.0.5",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -48,11 +48,11 @@
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.3",
     "tgrid": "^1.1.0",
-    "typia": "^8.0.0-dev.20250225",
+    "typia": "^8.0.0-dev.20250301",
     "ws": "^7.5.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=5.0.0-dev.20250223",
+    "@nestia/fetcher": ">=5.0.0-dev.20250301",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
@@ -80,7 +80,7 @@
     "ts-node": "^10.9.1",
     "ts-patch": "^3.3.0",
     "tstl": "^3.0.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.8.2"
   },
   "files": [
     "README.md",
