--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@mui/material": "^5.15.6",
     "@nestia/migrate": "workspace:^",
-    "@samchon/openapi": "3.0.0-dev.20250224",
+    "@samchon/openapi": "^3.0.0-dev.20250301",
     "@stackblitz/sdk": "^1.11.0",
     "js-yaml": "^4.1.0",
     "prettier": "3.3.3",
@@ -65,7 +65,7 @@
     "react-dom": "^18.3.1",
     "rollup": "^4.24.2",
     "ts-node": "^10.9.2",
-    "typescript": "~5.7.2",
+    "typescript": "~5.8.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
   },
