--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "5.0.0-dev.20250223",
+  "version": "5.0.0-dev.20250301",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -34,7 +34,7 @@
   "dependencies": {
     "@nestia/core": "workspace:^",
     "@nestia/fetcher": "workspace:^",
-    "@samchon/openapi": "3.0.0-dev.20250224",
+    "@samchon/openapi": "^3.0.0-dev.20250301",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -44,11 +44,11 @@
     "tsconfck": "^2.1.2",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": "^8.0.0-dev.20250225"
+    "typia": "^8.0.0-dev.20250301"
   },
   "peerDependencies": {
-    "@nestia/core": ">=5.0.0-dev.20250223",
-    "@nestia/fetcher": ">=5.0.0-dev.20250223",
+    "@nestia/core": ">=5.0.0-dev.20250301",
+    "@nestia/fetcher": ">=5.0.0-dev.20250301",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
@@ -71,7 +71,7 @@
     "rimraf": "^6.0.1",
     "tgrid": "^1.1.0",
     "ts-patch": "^3.3.0",
-    "typescript": "~5.7.2",
+    "typescript": "~5.8.2",
     "typescript-transform-paths": "^3.4.4",
     "uuid": "^9.0.0"
   },
