--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           version: 8
       - name: Root Setup
-        run: pnpm install && npm run build
+        run: pnpm install && pnpm run build
       - name: Build
         working-directory: website 
         run: npm install && npm run build
