--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -37,12 +37,12 @@
   "dependencies": {
     "@mui/material": "^5.15.6",
     "@nestia/migrate": "workspace:^",
-    "@samchon/openapi": "^4.0.0-dev.20250406",
+    "@samchon/openapi": "^4.0.0",
     "@stackblitz/sdk": "^1.11.0",
     "js-yaml": "^4.1.0",
     "prettier": "3.3.3",
     "react-mui-fileuploader": "^0.5.2",
-    "typia": "^9.0.0-dev.20250406"
+    "typia": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
