--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "@nestia/core": "workspace:^",
     "@nestia/fetcher": "workspace:^",
-    "@samchon/openapi": "^4.0.0-dev.20250406",
+    "@samchon/openapi": "^4.0.0",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -44,7 +44,7 @@
     "tsconfck": "^2.1.2",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": "^9.0.0-dev.20250406"
+    "typia": "^9.0.0"
   },
   "peerDependencies": {
     "@nestia/core": ">=6.0.0-dev.20250406-5",
