--- a/packages/fetcher/package.json
+++ b/packages/fetcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/fetcher",
-  "version": "6.0.0-dev.20250406-5",
+  "version": "6.0.1-dev.20250406",
   "description": "Fetcher library of Nestia SDK",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -27,11 +27,11 @@
   "homepage": "https://nestia.io",
   "dependencies": {
     "@samchon/openapi": "^4.0.0",
-    "typia": "^9.0.0"
+    "typia": "^9.0.1"
   },
   "peerDependencies": {
     "@samchon/openapi": ">=4.0.0 <5.0.0",
-    "typia": ">=9.0.0 <10.0.0"
+    "typia": ">=9.0.1 <10.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.14",
