--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "6.0.0-dev.20250406-5",
+  "version": "6.0.1-dev.20250406",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -44,11 +44,11 @@
     "tsconfck": "^2.1.2",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": "^9.0.0"
+    "typia": "^9.0.1"
   },
   "peerDependencies": {
-    "@nestia/core": ">=6.0.0-dev.20250406-5",
-    "@nestia/fetcher": ">=6.0.0-dev.20250406-5",
+    "@nestia/core": ">=6.0.1-dev.20250406",
+    "@nestia/fetcher": ">=6.0.1-dev.20250406",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
@@ -63,7 +63,6 @@
     "@types/glob": "^7.2.0",
     "@types/node": "^18.11.15",
     "@types/ts-expose-internals": "npm:ts-expose-internals@5.4.5",
-    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.29.0",
@@ -72,8 +71,7 @@
     "tgrid": "^1.1.0",
     "ts-patch": "^3.3.0",
     "typescript": "~5.8.2",
-    "typescript-transform-paths": "^3.4.4",
-    "uuid": "^9.0.0"
+    "typescript-transform-paths": "^3.4.4"
   },
   "files": [
     "assets",
