--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -41,8 +41,8 @@
     "@nestia/core": "workspace:^",
     "@nestia/e2e": "workspace:^",
     "@nestia/fetcher": "workspace:^",
-    "@nestjs/common": "^11.0.13",
     "@nestia/sdk": "workspace:^",
+    "@nestjs/common": "^11.0.13",
     "@nestjs/core": "^11.0.13",
     "@nestjs/platform-express": "^11.0.13",
     "@nestjs/platform-fastify": "^11.0.13",
@@ -72,13 +72,14 @@
     "typescript-transform-paths": "^3.5.2"
   },
   "dependencies": {
-    "@samchon/openapi": "^4.0.0",
+    "@samchon/openapi": "4.3.2",
     "commander": "10.0.0",
     "inquirer": "8.2.5",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.3",
+    "prettier-plugin-jsdoc": "^1.3.2",
     "tstl": "^3.0.0",
-    "typescript": "~5.8.2",
-    "typia": "^9.0.1"
+    "typescript": "~5.8.3",
+    "typia": "^9.3.1"
   },
   "files": [
     "lib",
