--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.10.1",
     "prettier": "^3.2.4",
+    "prettier-plugin-jsdoc": "^1.3.2",
     "rimraf": "^6.0.1",
     "sloc": "^0.3.0"
   }
