--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -37,10 +37,12 @@
   "dependencies": {
     "@mui/material": "^5.15.6",
     "@nestia/migrate": "workspace:^",
-    "@samchon/openapi": "^4.3.2",
+    "@samchon/openapi": "^4.3.3",
     "@stackblitz/sdk": "^1.11.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "js-yaml": "^4.1.0",
     "prettier": "3.3.3",
+    "prettier-plugin-jsdoc": "^1.3.2",
     "react-mui-fileuploader": "^0.5.2",
     "typia": "^9.3.1"
   },
