--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "@nestia/core": "workspace:^",
     "@nestia/fetcher": "workspace:^",
-    "@samchon/openapi": "^4.3.3",
+    "@samchon/openapi": "^4.5.0",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -44,15 +44,10 @@
     "tsconfck": "^2.1.2",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": "^9.3.1"
+    "typia": "^9.5.0"
   },
   "peerDependencies": {
-    "@nestia/core": ">=7.0.0-dev.20250608",
-    "@nestia/fetcher": ">=7.0.0-dev.20250608",
-    "@nestjs/common": ">=7.0.1",
-    "@nestjs/core": ">=7.0.1",
-    "reflect-metadata": ">=0.1.12",
-    "ts-node": ">=10.6.0"
+    "@nestia/core": ">=7.0.0-dev.20250608"
   },
   "devDependencies": {
     "@nestjs/common": "^11.0.13",
