--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/editor",
-  "version": "7.0.0-dev.20250608",
+  "version": "8.0.5-dev.20250904-2",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
   "typings": "lib/index.d.ts",
