--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "8.0.1-dev.20250831",
+  "version": "8.0.5-dev.20250904-2",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -47,7 +47,7 @@
     "typia": "^9.6.1"
   },
   "peerDependencies": {
-    "@nestia/core": ">=8.0.1-dev.20250831"
+    "@nestia/core": ">=8.0.5-dev.20250904-2"
   },
   "devDependencies": {
     "@nestjs/common": "^11.0.13",
