--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
   "name": "@nestia/station",
-  "version": "8.1.0",
+  "version": "9.0.0",
   "description": "Nestia station",
   "scripts": {
     "build": "node deploy build",
     "package:latest": "node deploy publish --tag latest",
-    "package:next": "node deploy publish --tag next",
+    "package:next": "node deploy publish --tag next --migrate",
     "prettier": "prettier packages/*/src/**/*.ts --write && prettier benchmark/**/*.ts && prettier test/**/*.ts --write"
   },
   "repository": {
