--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "prettier-plugin-jsdoc": "^1.3.2",
     "rimraf": "^6.0.1",
     "sloc": "^0.3.0"
-  }
+  },
+  "packageManager": "pnpm@10.6.4"
 }
